# text_predictor

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  nano_cli.py  pyproject.toml  run_train_model.ps1  rxconfig.py  test.py  train.py  utils.py
assets/css/: main.css
logs/: events.out.tfevents.1742772655.myDellJoa.6752.0  events.out.tfevents.1742777748.myDellJoa.23208.0  events.out.tfevents.1742842866.myDellJoa.10464.0  events.out.tfevents.1742851571.myDellJoa.25076.0  events.out.tfevents.1742866514.myDellJoa.26588.0  events.out.tfevents.1742866565.myDellJoa.15780.0  events.out.tfevents.1754888886.DESKTOP-JLRHDK4.25320.0  events.out.tfevents.1754888922.DESKTOP-JLRHDK4.28060.0  events.out.tfevents.1754889408.DESKTOP-JLRHDK4.27300.0  events.out.tfevents.1754889721.DESKTOP-JLRHDK4.17136.0  events.out.tfevents.1754889906.DESKTOP-JLRHDK4.25428.0  events.out.tfevents.1754890240.DESKTOP-JLRHDK4.15476.0  events.out.tfevents.1754890530.DESKTOP-JLRHDK4.26680.0
models/: model_1.pth
text_predictor/: __init__.py  text_predictor.py
text_predictor/api/: __init__.py  chat_state.py
text_predictor/components/: __init__.py  main.py
text_predictor/styles/: __init__.py  main.py
